# chump

./: .css-discipline-baseline.txt  .cursorignore  .dockerignore  .env.example  .env.minimal  .gitattributes  .gitignore  .gitmodules  .pr-body.md  AGENTS.md  BETA_TESTERS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRITY_AUDIT_1_GAP_CLOSURE.md  INTEGRITY_AUDIT_3_EVAL_METHODOLOGY.md  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  SWARM-010.marker  adversary.md  build.rs  chump-adversary.yaml  chump-mcp.json  chump_memory.db  deny.toml  dist-workspace.toml  migration.sql  migration_proposal.md  run-best.sh  run-discord-full.sh  run-discord-ollama.sh  run-discord.sh  run-local.sh  run-web.sh  run.sh  (+4 more)
.chump/: fleet-paused  github_cache.db  inventory.db  main-preflight-state.json  operator_id  paramedic_attempts.db  phase2-move-plan.sh  phase2-sed-pairs.txt  phase3-categorize.sh  phase3-patterns.json  phase3-sed-pairs.txt  pr-shepherd-filed-gaps.jsonl  pr-stuck-state.json  pr_rescue_stats.json  state.sql  state.sql.lz4  trunk-sentinel-state.json
.chump-locks/: .bootstrap-session-id  claude-agent-lease-build-1776390391.json  claude-funny-hypatia-rel-004-1776392642.json
.chump-plans/: CREDIBLE-069.md  CREDIBLE-070.md  CREDIBLE-071.md  CREDIBLE-072.md  INFRA-060.md  INTEGRATION_CYCLE_2026-05-29.md
chump-tool-macro/: Cargo.toml  README.md
chump-tool-macro/src/: lib.rs
crates/ambient-cli/: Cargo.toml  README.md
crates/ambient-cli/src/: ambient_emit.rs  ambient_rotate.rs  ambient_stream.rs  lib.rs
crates/ambient-cli/tests/: roundtrip.rs
crates/ast-crawler/: Cargo.toml
crates/ast-crawler/src/: lib.rs
crates/chump-agent-lease/: CHANGELOG.md  Cargo.toml  README.md
crates/chump-agent-lease/src/: lib.rs
crates/chump-belief-state/: Cargo.toml  README.md
crates/chump-belief-state/src/: lib.rs
crates/chump-cancel-registry/: Cargo.toml  README.md
crates/chump-cancel-registry/src/: lib.rs
crates/chump-coord/: Cargo.toml
crates/chump-coord/src/: assign.rs  capability.rs  consensus.rs  events.rs  help_request.rs  jetstream_consumer.rs  lib.rs  main.rs  mesh.rs  mesh_bridge.rs  nats_primary.rs  rpc.rs  scratchpad.rs  work_board.rs
crates/chump-coord/src/mission/: mod.rs  persistence.rs  replanning.rs
crates/chump-coord/src/worker/: capability.rs  loop_body.rs  mod.rs  worktree.rs
crates/chump-coord/tests/: a2a_consensus.rs  a2a_layer1a.rs  a2a_layer1a_nats.rs  a2a_layer2b.rs  a2a_layer2c.rs  a2a_layer2c_schema.rs  a2a_layer3d.rs  a2a_layer3d_seeds.rs  a2a_mesh.rs  ambient_distribution.rs  chump_coord_ordering.rs  chump_coord_reconnect.rs  chump_coord_replay.rs  distributed_mutex.rs  help_request.rs  jetstream_replay.rs  mesh_local.rs  mission_test.rs  work_board.rs
crates/chump-cost-tracker/: Cargo.toml  README.md
crates/chump-cost-tracker/src/: lib.rs
crates/chump-curator-supervisor/: Cargo.toml
crates/chump-curator-supervisor/src/: main.rs
crates/chump-demo/: Cargo.toml
crates/chump-demo/src/: lib.rs  main.rs
crates/chump-disk-inventory/: Cargo.toml
crates/chump-disk-inventory/src/: main.rs
crates/chump-fleet-recorder/: Cargo.toml
crates/chump-fleet-recorder/src/: main.rs
crates/chump-fleet-server/: Cargo.toml  daemons.toml
crates/chump-fleet-server/src/: dashboard.rs  db.rs  lib.rs  main.rs  routes.rs  segmenter.rs
crates/chump-fleet-server/tests/: dashboard_summary.rs
crates/chump-fleet-server/tests/fixtures/: events.sql
crates/chump-gap-store/: Cargo.toml  README.md
crates/chump-gap-store/src/: lib.rs  sync.rs
crates/chump-gap-store/src/maintenance/: architect.rs  doctor.rs  gardener.rs  integrity.rs  mod.rs
crates/chump-gh-app/: Cargo.toml  README.md
crates/chump-gh-app/src/: lib.rs
crates/chump-git-hooks/: Cargo.toml  README.md
crates/chump-git-hooks/src/: lib.rs
crates/chump-github-cache/: Cargo.toml  README.md
crates/chump-github-cache/migrations/: 001_initial_schema.sql
crates/chump-github-cache/src/: error.rs  lib.rs  schema.rs  webhook.rs
crates/chump-handoff/: Cargo.toml  README.md
crates/chump-handoff/src/: contracts.rs  external_repo_schema.rs  lib.rs  transport.rs  validate.rs
crates/chump-handoff/tests/: contract_violation.rs
crates/chump-handoff/tests/fixtures/: onboard-scan-beast-mode-sample.json
crates/chump-integrator/: Cargo.toml
crates/chump-integrator/src/: config.rs  daemon.rs  lib.rs  main.rs  policy.rs  pr_body.rs  sampling.rs
crates/chump-integrator/src/cycle/: merge_branch.rs  mod.rs  select.rs
crates/chump-integrator/tests/: integration.rs  test_cycle_dry_run.rs  test_cycle_policy.rs  test_cycle_select_integration.rs  test_manifest.rs
crates/chump-mcp-lifecycle/: CHANGELOG.md  Cargo.toml  README.md
crates/chump-mcp-lifecycle/src/: lib.rs
crates/chump-messaging/: Cargo.toml  README.md
crates/chump-messaging/src/: adapter.rs  broker.rs  error.rs  lib.rs
crates/chump-orchestrator/: Cargo.toml  README.md
crates/chump-orchestrator/src/: dispatch.rs  lib.rs  main.rs  monitor.rs  reflect.rs  routing.rs  self_test.rs  thompson.rs
crates/chump-orchestrator/tests/: cli_smoke.rs  e2e_smoke.rs  fault_injection.rs
crates/chump-perception/: Cargo.toml  README.md
crates/chump-perception/src/: lib.rs
crates/chump-planner/: Cargo.toml
crates/chump-planner/src/: gap.rs  graph.rs  lib.rs  parse.rs  plan.rs  reconcile.rs  score.rs
crates/chump-planner/src/output/: json.rs  mod.rs  table.rs
crates/chump-planner/tests/: integration.rs
crates/chump-policy/: Cargo.toml
crates/chump-policy/src/: lib.rs
crates/chump-reviewer-routing/: Cargo.toml
crates/chump-reviewer-routing/src/: lib.rs
crates/chump-ship/: Cargo.toml
crates/chump-ship/src/: bot_merge.rs  lib.rs  manual_ship.rs  ship.rs
crates/chump-team/: Cargo.toml
crates/chump-team/src/: auth.rs  capabilities.rs  claims.rs  config.rs  errors.rs  gaps.rs  lib.rs  nuggets.rs  quotas.rs
crates/chump-team/tests/: live.rs  nuggets_live.rs
crates/chump-verified-aggregator/: Cargo.toml
crates/chump-verified-aggregator/src/: db.rs  lib.rs  main.rs  routes.rs
(+6868 files in other folders)
