[workspace]
members = ["chump-tool-macro", "desktop/src-tauri", "crates/mcp-servers/chump-mcp-github", "crates/mcp-servers/chump-mcp-tavily", "crates/mcp-servers/chump-mcp-adb"]
resolver = "2"

[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Rust agent: OpenAI-compatible inference, rich tools, SQLite state, optional web PWA and Discord"

[[bin]]
name = "chump"
path = "src/main.rs"

[[bin]]
name = "fleet-ws-echo"
path = "src/bin/fleet_ws_echo.rs"

[features]
default = []
# In-process embeddings via fastembed (no Python embed server). Model downloaded on first use.
inprocess-embed = ["dep:fastembed", "dep:once_cell"]
# In-process chat via mistral.rs (mistralrs). On Apple Silicon, also enable `mistralrs-metal` for GPU.
mistralrs-infer = ["dep:mistralrs"]
mistralrs-metal = ["mistralrs-infer", "mistralrs/metal"]
# WASM tool runner uses wasmtime CLI (no crate). wasm_calc / wasm_text are enabled when wasm/*.wasm artifacts exist.
# Heap profiling via dhat-rs. Use: cargo run --release --features dhat-heap
dhat-heap = ["dep:dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
chump-tool-macro = { path = "chump-tool-macro" }
inventory = "0.3"
axonerai = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.21"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "utils", "cache", "rustls_backend"] }
fastembed = { version = "5", optional = true }
once_cell = { version = "1.19", optional = true }
async-std = "1.13.2"
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace", "limit"] }
mime_guess = "2"
notify = "6"
tokio-stream = "0.1"
amari-holographic = { version = "0.19", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
patch = { version = "0.7", default-features = false }
jsonschema = { version = "0.26", default-features = false }
mistralrs = { version = "0.8.1", optional = true, default-features = false }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = "0.3"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }

[profile.release]
# Keep debug info for profiling (flamegraph, cargo-profiler). Strip in CI if needed.
debug = true
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
# Full debug info for best profiler backtraces
debug = true
strip = false

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"

## Note: this repo previously used a local reqwest patch to force rustls.
## We now rely on `reqwest` with `rustls-tls` enabled in [dependencies].

# Many modules expose public items for tests, trait surfaces, and future wiring; suppress
# dead_code noise so clippy stays actionable on real issues (unused imports/vars, style).
[lints.rust]
dead_code = "allow"
