[workspace]
members = ["chump-tool-macro", "desktop/src-tauri", "crates/mcp-servers/chump-mcp-github", "crates/mcp-servers/chump-mcp-tavily", "crates/mcp-servers/chump-mcp-adb"]
resolver = "2"

[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Rust agent: OpenAI-compatible inference, rich tools, SQLite state, optional web PWA and Discord"
repository = "https://github.com/repairman29/chump"
homepage = "https://repairman29.github.io/chump/"
license = "MIT"
readme = "README.md"

[[bin]]
name = "chump"
path = "src/main.rs"

[[bin]]
name = "fleet-ws-echo"
path = "src/bin/fleet_ws_echo.rs"

[features]
default = []
# In-process embeddings via fastembed (no Python embed server). Model downloaded on first use.
inprocess-embed = ["dep:fastembed", "dep:once_cell"]
# In-process chat via mistral.rs (mistralrs). On Apple Silicon, also enable `mistralrs-metal` for GPU.
mistralrs-infer = ["dep:mistralrs"]
mistralrs-metal = ["mistralrs-infer", "mistralrs/metal"]
# WASM tool runner uses wasmtime CLI (no crate). wasm_calc / wasm_text are enabled when wasm/*.wasm artifacts exist.
# Heap profiling via dhat-rs. Use: cargo run --release --features dhat-heap
dhat-heap = ["dep:dhat"]
# Dev-only tokio-console support. Use: cargo run --features tokio-console
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
# Telegram messaging adapter. V1 send-only over reqwest needs no extra deps; the
# feature flag exists so V2 (long-poll/webhook) can opt into a richer client.
telegram = []
# Browser automation. V1 is empty (scaffold only — see src/browser.rs and
# docs/BROWSER_AUTOMATION.md). V2 will pull in chromiumoxide / thirtyfour and
# enable the real `browser` tool backend.
browser-automation = []
# Voice mode: STT (whisper-rs) + TTS (system/ElevenLabs/Cartesia).
# Scaffold only — needs whisper model download + macOS mic permissions for real use.
voice = []
# Sprint A1 (Defense Trinity): encrypted-at-rest SQLite via sqlcipher.
# Disabled by default — requires a passphrase strategy (CHUMP_DB_PASSPHRASE env var
# or Keychain) and a migration path from existing plain DBs. When enabled, db_pool
# runs PRAGMA key on every connection. See docs/SPRINT_A_ENCRYPTED_DB.md for the
# full design and migration procedure.
#
# To build with encryption:
#   cargo build --release --no-default-features --features encrypted-db,...
# (You must list all other features you want since we disable defaults.)
encrypted-db = []

[dependencies]
console-subscriber = { version = "0.4", optional = true }
dhat = { version = "0.3", optional = true }
chump-tool-macro = { path = "chump-tool-macro" }
inventory = "0.3"
axonerai = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
scraper = "0.21"
r2d2 = "0.8"
# Plain bundled SQLite. Encryption (sqlcipher) was tried in a previous sprint but broke
# backward compatibility with existing plain DBs and lacked a passphrase management
# system. See docs/NEXT_GEN_COMPETITIVE_INTEL.md (IronClaw Sprint A) for the proper
# encrypted-db feature design that needs implementation before re-introducing sqlcipher.
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "utils", "cache", "rustls_backend"] }
fastembed = { version = "5", optional = true }
once_cell = { version = "1.19", optional = true }
async-std = "1.13.2"
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace", "limit"] }
mime_guess = "2"
notify = "6"
tokio-stream = "0.1"
amari-holographic = { version = "0.19", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
patch = { version = "0.7", default-features = false }
jsonschema = { version = "0.26", default-features = false }
serde_yaml = "0.9"
mistralrs = { version = "0.8.1", optional = true, default-features = false }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = "0.3"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
mimalloc = { version = "0.1", default-features = false }
wasmtime = "20"
wasmtime-wasi = "20"
wasi-common = "20"
sha2 = "0.11.0"
hex = "0.4.3"

[profile.release]
# Keep debug info for profiling (flamegraph, cargo-profiler). Strip in CI if needed.
debug = true
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
# Full debug info for best profiler backtraces
debug = true
strip = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
tempfile = "3"

## Note: this repo previously used a local reqwest patch to force rustls.
## We now rely on `reqwest` with `rustls-tls` enabled in [dependencies].

# Many modules expose public items for tests, trait surfaces, and future wiring; suppress
# dead_code noise so clippy stays actionable on real issues (unused imports/vars, style).
[lints.rust]
dead_code = "allow"
