[workspace]
members = [
    "chump-tool-macro",
    "desktop/src-tauri",
    "crates/chump-agent-lease",
    "crates/chump-xml-adapter",
    "crates/chump-mcp-lifecycle",
    "crates/chump-cancel-registry",
    "crates/chump-perception",
    "crates/chump-cost-tracker",
    "crates/chump-gap-store",
    "crates/chump-messaging",
    "crates/chump-coord",
    "crates/chump-orchestrator",
    "crates/chump-planner",
    "crates/chump-ship",
    "crates/mcp-servers/chump-mcp-github",
    "crates/mcp-servers/chump-mcp-tavily",
    "crates/mcp-servers/chump-mcp-adb",
    "crates/mcp-servers/chump-mcp-gaps",
    "crates/mcp-servers/chump-mcp-eval",
    "crates/mcp-servers/chump-mcp-coord",
    "crates/mcp-servers/chump-mcp-memory",
    "crates/chump-gh-app",
    "crates/chump-team",
    "crates/chump-demo",
    "crates/ambient-cli",
    "crates/ast-crawler",
    "crates/chump-git-hooks",
    "crates/chump-github-cache",
    "crates/chump-handoff",
    "crates/chump-fleet-server",
    "crates/chump-fleet-recorder",
    "crates/chump-reviewer-routing",
    "crates/chump-policy",
    "crates/chump-integrator",
    "crates/chump-curator-supervisor",
]
resolver = "2"

[package]
name = "chump"
version = "0.2.0"
edition = "2021"
description = "Self-hosted Rust agent: OpenAI-compatible inference, rich tools, SQLite state, optional web PWA and Discord"
repository = "https://github.com/repairman29/chump"
homepage = "https://repairman29.github.io/chump/"
license = "AGPL-3.0-only"
readme = "README.md"

[[bin]]
name = "chump"
path = "src/main.rs"

[[bin]]
name = "fleet-ws-echo"
path = "src/bin/fleet_ws_echo.rs"

[[bin]]
name = "bandit-replay"
path = "src/bin/bandit-replay.rs"

[[bin]]
name = "quantum-tool-choice"
path = "experiments/quantum_tool_choice.rs"

[features]
default = []
# In-process embeddings via fastembed (no Python embed server). Model downloaded on first use.
inprocess-embed = ["dep:fastembed", "dep:once_cell"]
# In-process chat via mistral.rs (mistralrs). On Apple Silicon, also enable `mistralrs-metal` for GPU.
mistralrs-infer = ["dep:mistralrs"]
mistralrs-metal = ["mistralrs-infer", "mistralrs/metal"]
# WASM tool runner uses wasmtime CLI (no crate). wasm_calc / wasm_text are enabled when wasm/*.wasm artifacts exist.
# Heap profiling via dhat-rs. Use: cargo run --release --features dhat-heap
dhat-heap = ["dep:dhat"]
# Dev-only tokio-console support. Use: cargo run --features tokio-console
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
# Telegram messaging adapter. V1 send-only over reqwest needs no extra deps; the
# feature flag exists so V2 (long-poll/webhook) can opt into a richer client.
telegram = []
# Browser automation. V1 is empty (scaffold only — see src/browser.rs and
# docs/operations/BROWSER_AUTOMATION.md). V2 will pull in chromiumoxide / thirtyfour and
# enable the real `browser` tool backend.
browser-automation = []
# SECURITY-004 Path B: Discord gateway (serenity). Default OFF because
# serenity 0.12.5 (latest crates.io) pins tokio-tungstenite 0.21 →
# tokio-rustls 0.25 → rustls 0.22 → rustls-webpki 0.102.8 (HIGH DoS,
# RUSTSEC-2026-0104). Default builds drop the entire vulnerable chain.
# Build with `--features discord` to opt back in (still vulnerable until
# serenity v0.13 ships; track via RELIABILITY-001 / SECURITY-005).
discord = ["dep:serenity"]
# Sprint A1 (Defense Trinity): encrypted-at-rest SQLite via sqlcipher.
# Disabled by default — requires a passphrase strategy (CHUMP_DB_PASSPHRASE env var
# or Keychain) and a migration path from existing plain DBs. When enabled, db_pool
# runs PRAGMA key on every connection. See docs/SPRINT_A_ENCRYPTED_DB.md for the
# full design and migration procedure.
#
# To build with encryption:
#   cargo build --release --no-default-features --features encrypted-db,...
# (You must list all other features you want since we disable defaults.)
encrypted-db = []

[dependencies]
console-subscriber = { version = "0.5", optional = true }
dhat = { version = "0.3", optional = true }
# `version` is required for `cargo publish` on the root crate once these crates
# exist on crates.io at the pinned versions; workspace builds still use `path`.
chump-tool-macro = { path = "chump-tool-macro", version = "0.2.0" }
chump-agent-lease = { path = "crates/chump-agent-lease", version = "0.3.0" }
chump-orchestrator = { path = "crates/chump-orchestrator", version = "0.2.0" }
chump-planner = { path = "crates/chump-planner", version = "0.1.0" }
chump-ship = { path = "crates/chump-ship", version = "0.2.0" }
chump-mcp-lifecycle = { path = "crates/chump-mcp-lifecycle", version = "0.2.0" }
chump-cancel-registry = { path = "crates/chump-cancel-registry", version = "0.2.0" }
chump-perception = { path = "crates/chump-perception", version = "0.2.0" }
chump-cost-tracker = { path = "crates/chump-cost-tracker", version = "0.2.0" }
chump-gap-store = { path = "crates/chump-gap-store", version = "0.2.0" }
chump-messaging = { path = "crates/chump-messaging", version = "0.2.0" }
chump-ambient-cli = { path = "crates/ambient-cli", version = "0.1.0" }
chump-team = { path = "crates/chump-team", version = "0.1.0" }
chump-ast-crawler = { path = "crates/ast-crawler", version = "0.1.0" }
chump-handoff = { path = "crates/chump-handoff", version = "0.1.0" } # INFRA-2108: external-repo schema
# META-175: JetStream durable consumer per role — needed by web_server handle_fleet_wire_health.
chump-coord = { path = "crates/chump-coord", version = "0.2.0" }
async-nats = "0.49"
inventory = "0.3"
axonerai = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0"
thiserror = { version = "2.0", optional = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
scraper = "0.27"
r2d2 = "0.8"
# Plain bundled SQLite. Encryption (sqlcipher) was tried in a previous sprint but broke
# backward compatibility with existing plain DBs and lacked a passphrase management
# system. See docs/strategy/NEXT_GEN_COMPETITIVE_INTEL.md (IronClaw Sprint A) for the proper
# encrypted-db feature design that needs implementation before re-introducing sqlcipher.
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1", features = ["parse"] }
base64 = "0.22"
aes-gcm = "0.11"
serenity = { version = "0.12", optional = true, default-features = false, features = ["client", "gateway", "model", "http", "utils", "cache", "rustls_backend"] }
fastembed = { version = "5", optional = true }
once_cell = { version = "1.19", optional = true }
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.7", features = ["cors", "fs", "compression-gzip", "trace", "limit"] }
mime_guess = "2"
notify = "8"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
patch = { version = "0.7", default-features = false }
jsonschema = { version = "0.47", default-features = false }
serde_yaml = "0.9"
mistralrs = { version = "0.8.1", optional = true, default-features = false }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
mimalloc = { version = "0.1", default-features = false }
wasmtime = "46"
wasmtime-wasi = "46"
wasi-common = "46"
sha2 = "0.11.0"
hex = "0.4.3"

[profile.release]
# Keep debug info for profiling (flamegraph, cargo-profiler). Strip in CI if needed.
debug = true
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
# Full debug info for best profiler backtraces
debug = true
strip = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
tempfile = "3"
# INFRA-693: enable the `test-helpers` feature so briefing/kpi_report tests
# can keep calling `store.conn_for_test()` to seed synthetic gaps.
chump-gap-store = { path = "crates/chump-gap-store", version = "0.2.0", features = ["test-helpers"] }

## Note: this repo previously used a local reqwest patch to force rustls.
## We now rely on `reqwest` with `rustls-tls` enabled in [dependencies].

# Many modules expose public items for tests, trait surfaces, and future wiring; suppress
# dead_code noise so clippy stays actionable on real issues (unused imports/vars, style).
# Stylistic clippy lints relaxed at workspace level. These caught a wave of
# fleet-shipped PRs in 2026-05-07 because clippy 1.95 made them strict and
# fleet workers' Rust style predates the new defaults. They're cosmetic,
# not correctness; the cycle-thrash of force-pushing fixes outweighs the
# style benefit. If we ever want them back, downgrade to "warn" first to
# scrub the codebase, then back to "deny".
[workspace.lints.clippy]
# Names verified against clippy 1.95 lint index. Earlier INFRA-664 used
# 'doc_list_item_overindented' which is unknown; real name is
# 'doc_overindented_list_items'. Also allow unknown_lints rust warn
# so future clippy version mismatches don't block CI.
doc_overindented_list_items = "allow"
manual_strip = "allow"
manual_split_once = "allow"
lines_filter_map_ok = "allow"
manual_is_multiple_of = "allow"
never_loop = "allow"
manual_clamp = "allow"
field_reassign_with_default = "allow"
# Wave 3 (2026-05-08, observed on PRs #1277/#1278/#1290):
manual_range_contains = "allow"
# Wave 4 (2026-05-08, still blocking #1277/#1278/#1290 after wave 3):
collapsible_match = "allow"
manual_pattern_char_comparison = "allow"
redundant_closure = "allow"

[workspace.lints.rust]
dead_code = "allow"
unknown_lints = "allow"

# Root crate (chump) opts into workspace-defined lints. Without this section
# the root crate ignores [workspace.lints.*] and CI fails on the very lints
# we just relaxed (observed on PR #1265 first attempt).
[lints]
workspace = true
