[package]
name = "chump-ambient-cli"
version = "0.1.0"
edition = "2021"
description = "Schema-enforced, multi-writer, append-only structured telemetry. A drop-in observability bus for local-first apps and solo-dev fleets — no collector, no daemon, no SaaS."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/ambient-cli"
license = "MIT"
keywords = ["observability", "telemetry", "events", "jsonl", "local-first"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lib]
name = "chump_ambient_cli"
path = "src/lib.rs"

[[bin]]
name = "ambient"
path = "src/bin/ambient.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
