[package]
name = "chump-ast-crawler"
version = "0.1.0"
edition = "2021"
description = "Deterministic tree-sitter AST crawler producing structured codebase shape (symbols, imports) for LLM-prompt input. Replaces subprocess-walk codebase-context with typed, cacheable, token-cheap output."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/ast-crawler"
license = "AGPL-3.0-only"
keywords = ["ast", "tree-sitter", "code-analysis", "llm", "agent"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
walkdir = "2"

# Tree-sitter language parsers. Versions verified compatible against
# tree-sitter 0.25.x at 2026-05-23. tree-sitter-rust and tree-sitter-typescript
# remain on 0.23/0.24 lines because newer 0.25 releases are not yet
# published; the LanguageFn ABI is forward-compatible across these minor
# bumps (tree-sitter::Language::from(LanguageFn) covers both).
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-bash = "0.25"

# Ambient emit primitive (unsupported-language event)
chump-ambient-cli = { path = "../ambient-cli", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
