[package]
name = "chump-agent-lease"
version = "0.1.0"
edition = "2021"
description = "Path-level optimistic leases for multi-agent coordination on a shared repo. Drop-in for any Rust-hosted agent system that needs to prevent silent file stomps between concurrent sessions."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-agent-lease"
license = "MIT"
keywords = ["agent", "coordination", "multi-agent", "lease", "llm"]
categories = ["concurrency", "development-tools", "filesystem"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints.rust]
missing_docs = "warn"
