[package]
name = "chump-coord"
version = "0.1.0"
edition = "2021"
description = "NATS-backed atomic coordination layer for multi-agent Chump sessions. Phase 1: KV claim store + JetStream event bus alongside the existing file-based lease system."
repository = "https://github.com/repairman29/chump"
license = "MIT"
keywords = ["agent", "coordination", "nats", "multi-agent", "lease"]
categories = ["concurrency", "development-tools"]

[[bin]]
name = "chump-coord"
path = "src/main.rs"

# INFRA-2002 / META-107 sub-gap #6: Rust ports of scripts/dispatch/worker.sh
# and scripts/dispatch/run-fleet.sh. Routed via CHUMP_WORKER_RUST=1 /
# CHUMP_FLEET_RUST=1 feature flags in the bash shims; legacy bodies stay
# inline for the 1-week parallel-run window.
[[bin]]
name = "chump-worker"
path = "src/bin/chump-worker.rs"

[[bin]]
name = "chump-fleet"
path = "src/bin/chump-fleet.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow      = "1.0"
async-nats  = "0.48"
async-trait = "0.1"
bytes       = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1.0"
sha2        = "0.11"
tokio       = { version = "1", features = ["full"] }
uuid        = { version = "1", features = ["v4"] }
chump-gap-store = { path = "../chump-gap-store", version = "0.1.0" }
tracing     = "0.1"
# INFRA-2002: worker loop emits existing registered ambient kinds
# (worker_exit, worker_stuck) via chump-ambient-cli's library API —
# same path the bash worker uses today via the `ambient emit` CLI.
chump-ambient-cli = { path = "../ambient-cli", version = "0.1.0" }

# INFRA-1815: mesh-bridge feature — optional dep on coord-mesh extracted from the
# internal sibling repo. Gated behind the `mesh-bridge` feature so crates that
# don't need the mesh substrate (plain CLI helpers, CI tools) don't incur the
# git dep.
#
# Consumption mechanism: git dependency with SHA pin (decision recorded in
# docs/arsenal/cross-pollination/CP-008-chump-coord-mesh.md §Consumption mechanism).
# Preferred over path-dep (breaks CI runners without the sibling clone) and over a
# private cargo registry (no infra cost at this scale).
#
# Status: Side A (create coord-mesh crate in the internal sibling repo) tracked in
# INFRA-1815-sideA. The dependency is scaffolded here but commented-out until Side A
# lands — at that point, swap the comment block below for the live dep + pin the SHA.
#
# To activate once Side A lands:
#   1. Get the HEAD SHA from the internal sibling repo after the coord-mesh crate ships.
#   2. Uncomment the [dependencies.coord-mesh] block below, replacing <COORD_MESH_SHA>.
#   3. Run: cargo update -p coord-mesh (or just cargo build --features mesh-bridge).
#   4. Commit Cargo.lock with the pinned SHA.
#
# [dependencies.coord-mesh]
# git = "https://github.com/repairman29/chump-proprietary"
# rev = "<COORD_MESH_SHA>"     # pin to the commit that ships crates/coord-mesh/
# optional = true

[dev-dependencies]
serial_test = "3"
tempfile    = "3"

# INFRA-1815: mesh-bridge feature flag.
# When enabled, re-exports coord-mesh types (MeshTransport, Channel, Message,
# AckMessage, BandwidthBudget, MessageQueue, consensus::*) so downstream
# consumers (INFRA-1758 events, INFRA-1763 predictive collision, INFRA-1804
# throttle glue) share one canonical substrate rather than independent ports.
#
# Activation: `cargo build --features mesh-bridge`
# Guard in code: `#[cfg(feature = "mesh-bridge")]`
[features]
default = []
mesh-bridge = []
# mesh-bridge = ["dep:coord-mesh"]  # uncomment when Side A lands (INFRA-1815-sideA)

[lints]
workspace = true
