[package]
name = "chump-curator-supervisor"
version = "0.1.0"
edition = "2021"
description = "L3 curator supervision daemon — detect silent failures, file gaps, dispatch Sonnet, auto-restart (INFRA-2239)"
repository = "https://github.com/repairman29/chump"
license = "MIT"
keywords = ["agent", "curator", "supervisor", "fleet", "resilience"]
categories = ["development-tools"]

[[bin]]
name = "chump-curator-supervisor"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0"
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex       = "1"
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1.0"
sha2        = "0.10"
hex         = "0.4"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
