[package]
name = "chump-demo"
version = "0.1.0"
edition = "2021"
description = "META-072: chump fleet demo-loop CLI — operationalize today's autonomy-cascade evidence into a repeatable 60-min demonstration"
license = "MIT"

[[bin]]
name = "chump-demo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
