[package]
name = "chump-fleet-recorder"
version = "0.1.0"
edition = "2021"
description = "NATS+ambient capture daemon — writes fleet events to .chump/fleet_events.db (INFRA-2174, INFRA-2164 sub-slice a)"
repository = "https://github.com/repairman29/chump"
license = "AGPL-3.0-only"
keywords = ["agent", "fleet", "recorder", "nats", "sqlite"]
categories = ["development-tools"]

[[bin]]
name = "chump-fleet-recorder"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0"
async-nats  = "0.50"
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures     = "0.3"
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
