[package]
name = "chump-gap-store"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed gap registry: status tracking, dependency graph, blame lineage, per-file YAML mirrors. Canonical store for the Chump fleet's coordination state. Zero internal deps on the chump binary."
repository = "https://github.com/repairman29/chump"
homepage = "https://github.com/repairman29/chump/tree/main/crates/chump-gap-store"
license = "MIT"
keywords = ["gap", "registry", "sqlite", "agent", "coordination"]
categories = ["development-tools", "database"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[features]
# Opt-in test helpers (`conn_for_test`) for downstream crates that want to
# seed the store directly from their own integration tests. Never enabled
# in production builds.
test-helpers = []

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints]
workspace = true
